--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="download-section">
                     <h3>Baixar Feed Completo</h3>
-                    <a href="https://thingspeak.mathworks.com/channels/2720624/feed.json" class="botao-link">Baixar JSON</a>
+                    <a href="https://thingspeak.mathworks.com/channels/2720624/feed.json" download="datos.json" class="botao-link">Baixar JSON</a>
                     <button onclick="downloadFeed('xml')">Baixar XML</button>
                     <button onclick="downloadFeed('csv')">Baixar CSV</button>
                 </div>
