--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <div id="dataContainer1" class="data-table"></div>
                     </div>
                 </div>
+                <a href="https://thingspeak.mathworks.com/channels/2720624/feed.csv" download="dados.csv" class="botao-download">Download CSV</a>
                 <div class="divider"></div>
                 <div class="container-flex">
                     <div class="chart-section">
