--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <section>
             <h2>ThingSpeak:</h2>
             <div>
+                <a href="https://thingspeak.mathworks.com/channels/2720624/feed.csv" download="datos.csv" class="botao-download">Download CSV</a>
                 <div class="container-flex">
                     <div class="chart-section">
                         <div class="select-container">
@@ -47,7 +48,7 @@
                         <div id="dataContainer1" class="data-table"></div>
                     </div>
                 </div>
-                <a href="https://thingspeak.mathworks.com/channels/2720624/feed.csv" download="dados.csv" class="botao-download">Download CSV</a>
+                <a href="https://thingspeak.mathworks.com/channels/2720624/field/1.csv" download="datos.csv" class="botao-download">Download CSV</a>
                 <div class="divider"></div>
                 <div class="container-flex">
                     <div class="chart-section">
@@ -72,6 +73,7 @@
                     </div>
                 </div>
             </div>
+            <a href="https://thingspeak.mathworks.com/channels/2720624/field/2.csv" download="datos.csv" class="botao-download">Download CSV</a>
             <div class="divider"></div>
                 <div class="container-flex">
                     <div class="chart-section">
@@ -96,6 +98,7 @@
                     </div>
                 </div>
             </div>
+            <a href="https://thingspeak.mathworks.com/channels/2720624/field/3.csv" download="datos.csv" class="botao-download">Download CSV</a>
         </section>
     </main>
 
