--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <meta name="description" content="Proyecto de monitoreo de temperatura, humedad y hidrogéno utilizando ESP32, DHT11 y MQ-8, con visualización en tiempo real en la plataforma ThingSpeak.">
     <meta name="google-site-verification" content="9yJxvYsOQ-EOGwJQtazPX0Kgucxw0ZnRlaPnpazSA9Q" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        .botao-download {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            cursor: pointer;
+            text-align: center;
+            margin: 10px 0;
+        }
+        .botao-download:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <header>
