--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <li>Recolectar datos de temperatura, humedad y hidrogéno en tiempo real utilizando el microcontrolador ESP32 y los sensores DHT11 y MQ-8.</li>
                 <li>Transmitir estos datos a la plataforma ThingSpeak para visualización.</li>
             </ul>
+            <a href="https://thingspeak.mathworks.com/channels/2720624/feed.csv" download="datos.csv" class="botao-download">Descargar los datos en CSV</a>
         </section>       
         <section>
             <h2>ThingSpeak:</h2>
             <div>
-                <a href="https://thingspeak.mathworks.com/channels/2720624/feed.csv" download="datos.csv" class="botao-download">Descargar los datos en CSV</a>
                 <div class="container-flex">
                     <div class="chart-section">
                         <div class="select-container">
@@ -117,6 +117,13 @@
                 </div>
             </div>
             <a href="https://thingspeak.mathworks.com/channels/2720624/field/3.csv" download="datos.csv" class="botao-download">Descargar datos de hidrogeno en CSV</a>
+            <div class="divider"></div>
+            <div id="maxValues">
+                <p id="maxTemperature">Maior Temperatura: --°C</p>
+                <p id="maxHumidity">Maior Umidade: --%</p>
+                <p id="maxHydrogen">Maior Hidrogênio: --ppm</p>
+            </div>
+
         </section>
     </main>
 
