--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
             <a href="https://thingspeak.mathworks.com/channels/2720624/field/3.csv" download="datos.csv" class="botao-download">Descargar datos de hidrogeno en CSV</a>
             <div class="divider"></div>
             <div id="maxValues">
-                <p id="maxTemperature">Maior Temperatura: --°C</p>
-                <p id="maxHumidity">Maior Umidade: --%</p>
-                <p id="maxHydrogen">Maior Hidrogênio: --ppm</p>
+                <p id="maxTemperature">Mayor Temperatura: --°C</p>
+                <p id="maxHumidity">Mayor Humedad: --%</p>
+                <p id="maxHydrogen">Mayor Hidrógeno: --ppm</p>
             </div>
 
         </section>
