--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <li>Transmitir estos datos a la plataforma ThingSpeak para visualización.</li>
             </ul>
             <a href="https://thingspeak.mathworks.com/channels/2720624/feed.csv" download="datos.csv" class="botao-download">Descargar los datos en CSV</a>
+            <p id="totalDataCount"></p>
         </section>       
         <section>
             <h2>ThingSpeak:</h2>
