--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </ul>
             <a href="https://thingspeak.mathworks.com/channels/2720624/feed.csv" download="datos.csv" class="botao-download">Descargar los datos en CSV</a>
             <p id="totalDataCount"></p>
+            <h2>Análisis de los datos:</h2>
             <div id="maxValues">
                 <div class="data-box">
                     <p id="maxTemperature">Mayor Temperatura: --°C</p>
